--- a/basepanel/pom.xml
+++ b/basepanel/pom.xml
@@ -16,8 +16,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.smart.swings</groupId>
 			<artifactId>x2jparser</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+		</dependency>
+    </dependencies>
 </project>
