--- a/swing-ui/src/main/resources/application.yml
+++ b/swing-ui/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 ui:
   component:
     componentConfigXml: UiComponents.xml
+    splashScreen: splashscreen.png
   toolbar:
     toolbarListMap:
       ENVBAR:
