working mac as well

--- a/swing-ui/src/main/resources/application.yml
+++ b/swing-ui/src/main/resources/application.yml
@@ -2,6 +2,7 @@ ui:
   component:
     componentConfigXml: UiComponents.xml
     splashScreen: splashscreen.png
+    lookAndFeel: mac
   toolbar:
     toolbarListMap:
       ENVBAR:
