look and feel final

--- a/swing-ui/src/main/resources/application.yml
+++ b/swing-ui/src/main/resources/application.yml
@@ -2,7 +2,7 @@ ui:
   component:
     componentConfigXml: UiComponents.xml
     splashScreen: splashscreen.png
-    lookAndFeel: mac
+    lookAndFeel: Nimbus
   toolbar:
     toolbarListMap:
       ENVBAR:
