--- a/basepanel/pom.xml
+++ b/basepanel/pom.xml
@@ -27,5 +27,11 @@
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-core</artifactId>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>io.smart.swings</groupId>
+			<artifactId>basemodel</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 </project>
